fix: fixing alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -173,6 +173,7 @@ a:hover {
     align-items: center;
     gap: 0.5rem;
     margin: 0;
+    font-size: 0.875rem;
     white-space: nowrap;
 }
 
@@ -181,9 +182,12 @@ a:hover {
     margin-right: 0.5rem;
 }
 
-.post-summary h4 {
+.post-summary {
     margin: 0;
-    flex: 1;
+}
+
+.post-title {
+    margin-bottom: 1rem;
 }
 
 .post-header {
